Added Section - 'Footer'

--- a/Front/index.html
+++ b/Front/index.html
@@ -99,9 +99,9 @@
                                         </div>
 
                                         <div class="basket-prod-count">
-                                            <p>-</p>
-                                            <input type="number">
-                                            <p>+</p>
+                                            <p class="increase-btn">-</p>
+                                            <input class="quantity-input" value="1" type="number">
+                                            <p class="decrease-btn">+</p>
                                         </div>
                                     </div>
 
@@ -138,9 +138,9 @@
                                         </div>
 
                                         <div class="basket-prod-count">
-                                            <p>-</p>
-                                            <input type="number">
-                                            <p>+</p>
+                                            <p class="increase-btn">-</p>
+                                            <input class="quantity-input" value="1" type="number">
+                                            <p class="decrease-btn">+</p>
                                         </div>
                                     </div>
 
@@ -176,9 +176,9 @@
                                         </div>
 
                                         <div class="basket-prod-count">
-                                            <p>-</p>
-                                            <input type="number">
-                                            <p>+</p>
+                                            <p class="increase-btn">-</p>
+                                            <input class="quantity-input" value="1" type="number">
+                                            <p class="decrease-btn">+</p>
                                         </div>
                                     </div>
 
@@ -214,47 +214,9 @@
                                         </div>
 
                                         <div class="basket-prod-count">
-                                            <p>-</p>
-                                            <input type="number">
-                                            <p>+</p>
-                                        </div>
-                                    </div>
-
-                                </div>
-
-                                <div class="basket-price-close">
-
-                                    <img class="basket-prod-close" src="/cilent/assets/icons/close-black.svg" alt="">
-                                    <span class="sell-price">$80</span>
-
-                                </div>
-
-
-                            </a>
-
-                        </li>
-                        <li>
-
-                            <a class="basket-prod" href="#">
-
-                                <div class="basket-prod-info">
-
-                                    <div class="basket-prod-image">
-                                        <img src="/cilent/assets/images/products/product.jpg" alt="product.jpg">
-                                    </div>
-
-                                    <div class="basket-prod-detail">
-
-                                        <div class="prod-info-name">
-                                            <h1>Product Name</h1>
-                                            <p>Color: Default</p>
-                                            <p>Size: Default</p>
-                                        </div>
-
-                                        <div class="basket-prod-count">
-                                            <p>-</p>
-                                            <input type="number">
-                                            <p>+</p>
+                                            <p class="increase-btn">-</p>
+                                            <input class="quantity-input" value="1" type="number">
+                                            <p class="decrease-btn">+</p>
                                         </div>
                                     </div>
 
@@ -454,9 +416,106 @@
 
     <footer>
 
+        <div class="footer-top">
+
+            <div class="brand-info">
+
+                <h1>VANGUARD</h1>
+
+                <div class="contact">
+
+                    <div class="brand-ad">
+                        <img src="/cilent/assets/icons/location.svg" alt="logo">
+                        <a href="#">Address: Your address</a>
+                    </div>
+                    <div class="brand-ad">
+                        <img src="/cilent/assets/icons/mail.svg" alt="logo">
+                        <a href="#">vanguard@gmail.az</a>
+                    </div>
+                    <div class="brand-ad">
+                        <img src="/cilent/assets/icons/phone.svg" alt="logo">
+                        <a href="#">+994 50 710 10 15</a>
+                    </div>
+
+                </div>
+
+                <div class="social-platforms">
+                    <a href="#"><img src="/cilent/assets/icons/facebook.svg" alt="facebook"></a>
+                    <a href="#"><img src="/cilent/assets/icons/instagram.svg" alt="instagram"></a>
+                    <a href="#"><img src="/cilent/assets/icons/twitter-x.svg" alt="twitter"></a>
+                    <a href="#"><img src="/cilent/assets/icons/linkedin.svg" alt="linkedin"></a>
+                    <a href="#"><img src="/cilent/assets/icons/whatsapp.svg" alt="whatsapp"></a>
+                </div>
+            </div>
+
+            <div class="web-info">
+
+                <div class="info-list">
+                    <h3>COMPANY</h1>
+
+                        <ul>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
+                </div>
+
+                <div class="info-list">
+                    <h3>HELP</h1>
+
+                        <ul>
+                            <li><a href="#">My Account</a></li>
+                            <li><a href="#">Find a Store</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Legal & Privacy</a></li>
+                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">Gift Card</a></li>
+                        </ul>
+                </div>
+
+                   <!-- <div class="info-list">
+                    <h3>HELP</h1>
+
+                        <ul>
+                            <li><a href="#">My Account</a></li>
+                            <li><a href="#">Find a Store</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Legal & Privacy</a></li>
+                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">Gift Card</a></li>
+                        </ul>
+                </div> -->
+
+            </div>
+
+            <div class="subscribe">
+
+                <h3>Subscribe</h3>
+
+                <form class="subscribe-form">
+                    <p>Be the first to get the latest news about trends, promotions, and much more!</p>
+                    <input type="email" placeholder="Enter your email">
+                    <div>
+                        <button type="submit" href="#">JOIN</button>
+                    </div>
+                </form>
+            </div>
+
+        </div>
+
+        <div class="footer-bottom">
+
+            <p>© 2024 Clothing. Made with by<a href="#">: Tamerlan Aliyev</a></p>
+            
+            <div class="payments">
+                <img src="/cilent/assets/icons/visa.svg" alt="visa">
+                <img src="/cilent/assets/icons/master.svg" alt="master">
+            </div>
+        </div>
+
     </footer>
 
-   <script src="/cilent/assets/js/index.js"></script>
+    <script src="/cilent/assets/js/index.js"></script>
 </body>
 
 </html>
