--- a/Front/index.html
+++ b/Front/index.html
@@ -412,6 +412,86 @@
 
     <main>
 
+        <section class="brand-section">
+
+            <div class="sliders">
+
+                <div class="slide">
+
+                    <img src="/cilent/assets/images/products/slider.png" alt="">
+                    <div class="slide-info">
+                        <h5 class="slide-title">Best Collection</h5>
+                        <h2 class="slide-name">EXCLUSIVE FASHION 2022</h2>
+                        <p class="slide-description">It is a long established fact that a reader will be distracted by
+                            the
+                            readable content of a page
+                            when looking at its layout.</p>
+                        <div class="slide-go">
+                            <a href="#">SHOP NOW</a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="slide">
+
+                    <img src="/cilent/assets/images/products/slider.png" alt="">
+                    <div class="slide-info">
+                        <h5 class="slide-title">Best Collection</h5>
+                        <h2 class="slide-name">EXCLUSIVE FASHION 2022</h2>
+                        <p class="slide-description">It is a long established fact that a reader will be distracted by
+                            the
+                            readable content of a page
+                            when looking at its layout.</p>
+                        <div class="slide-go">
+                            <a href="#">SHOP NOW</a>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+
+
+
+            <div class="toggle-button">
+                <a class="slider-left-btn" href="#">
+                    <img src="/cilent/assets/icons/slide-left.svg" alt="">
+                </a>
+                <a class="slider-right-btn" href="#">
+                    <img src="/cilent/assets/icons/slide-right.svg" alt="">
+                </a>
+            </div>
+
+            <div class="slider-cricle-btn">
+                
+            </div>
+
+        </section>
+
+
+        <section class="section">
+
+            <div class="hero-area hero-slider-1">
+
+                <h1>a</h1>
+
+            </div>
+            <div class="hero-area hero-slider-1">
+
+                <h1>bdasd</h1>
+
+            </div>
+            <div class="hero-area hero-slider-1">
+
+                <h1>c</h1>
+
+            </div>
+
+        </section>
+
+
     </main>
 
     <footer>
@@ -473,7 +553,7 @@
                         </ul>
                 </div>
 
-                   <!-- <div class="info-list">
+                <!-- <div class="info-list">
                     <h3>HELP</h1>
 
                         <ul>
@@ -506,7 +586,7 @@
         <div class="footer-bottom">
 
             <p>© 2024 Clothing. Made with by<a href="#">: Tamerlan Aliyev</a></p>
-            
+
             <div class="payments">
                 <img src="/cilent/assets/icons/visa.svg" alt="visa">
                 <img src="/cilent/assets/icons/master.svg" alt="master">
