Added Section Brand

--- a/Front/index.html
+++ b/Front/index.html
@@ -98,11 +98,7 @@
                                             <p>Size: Default</p>
                                         </div>
 
-                                        <div class="basket-prod-count">
-                                            <p class="increase-btn">-</p>
-                                            <input class="quantity-input" value="1" type="number">
-                                            <p class="decrease-btn">+</p>
-                                        </div>
+                                        <span class="dis-price">$80 <del class="sel-price">100</del></span>
                                     </div>
 
                                 </div>
@@ -110,7 +106,6 @@
                                 <div class="basket-price-close">
 
                                     <img class="basket-prod-close" src="/cilent/assets/icons/close-black.svg" alt="">
-                                    <span class="dis-price">$80 <del class="sel-price">100</del></span>
 
                                 </div>
 
@@ -137,11 +132,8 @@
                                             <p>Size: Default</p>
                                         </div>
 
-                                        <div class="basket-prod-count">
-                                            <p class="increase-btn">-</p>
-                                            <input class="quantity-input" value="1" type="number">
-                                            <p class="decrease-btn">+</p>
-                                        </div>
+                                        <span class="sell-price">$80</span>
+
                                     </div>
 
                                 </div>
@@ -149,7 +141,6 @@
                                 <div class="basket-price-close">
 
                                     <img class="basket-prod-close" src="/cilent/assets/icons/close-black.svg" alt="">
-                                    <span class="sell-price">$80</span>
 
                                 </div>
 
@@ -157,82 +148,7 @@
                             </a>
 
                         </li>
-                        <li>
 
-                            <a class="basket-prod" href="#">
-
-                                <div class="basket-prod-info">
-
-                                    <div class="basket-prod-image">
-                                        <img src="/cilent/assets/images/products/product.jpg" alt="product.jpg">
-                                    </div>
-
-                                    <div class="basket-prod-detail">
-
-                                        <div class="prod-info-name">
-                                            <h1>Product Name</h1>
-                                            <p>Color: Default</p>
-                                            <p>Size: Default</p>
-                                        </div>
-
-                                        <div class="basket-prod-count">
-                                            <p class="increase-btn">-</p>
-                                            <input class="quantity-input" value="1" type="number">
-                                            <p class="decrease-btn">+</p>
-                                        </div>
-                                    </div>
-
-                                </div>
-
-                                <div class="basket-price-close">
-
-                                    <img class="basket-prod-close" src="/cilent/assets/icons/close-black.svg" alt="">
-                                    <span class="sell-price">$80</span>
-
-                                </div>
-
-
-                            </a>
-
-                        </li>
-                        <li>
-
-                            <a class="basket-prod" href="#">
-
-                                <div class="basket-prod-info">
-
-                                    <div class="basket-prod-image">
-                                        <img src="/cilent/assets/images/products/product.jpg" alt="product.jpg">
-                                    </div>
-
-                                    <div class="basket-prod-detail">
-
-                                        <div class="prod-info-name">
-                                            <h1>Product Name</h1>
-                                            <p>Color: Default</p>
-                                            <p>Size: Default</p>
-                                        </div>
-
-                                        <div class="basket-prod-count">
-                                            <p class="increase-btn">-</p>
-                                            <input class="quantity-input" value="1" type="number">
-                                            <p class="decrease-btn">+</p>
-                                        </div>
-                                    </div>
-
-                                </div>
-
-                                <div class="basket-price-close">
-
-                                    <img class="basket-prod-close" src="/cilent/assets/icons/close-black.svg" alt="">
-                                    <span class="sell-price">$80</span>
-
-                                </div>
-
-
-                            </a>
-
-                        </li>
                     </ul>
 
                 </div>
@@ -410,6 +326,9 @@
 
     </header>
 
+    <!-- ================================
+        MAIN    -    START
+===================================== -->
     <main>
 
         <section class="brand-section">
@@ -418,7 +337,24 @@
 
                 <div class="slide">
 
-                    <img src="/cilent/assets/images/products/slider.png" alt="">
+                    <img src="/cilent/assets/images/products/slider-2.webp" alt="">
+                    <div class="slide-info">
+                        <h5 class="slide-title">Best Collection</h5>
+                        <h2 class="slide-name">EXCLUSIVE FASHION 2022</h2>
+                        <p class="slide-description">It is a long established fact that a reader will be distracted by
+                            the
+                            readable content of a page
+                            when looking at its layout.</p>
+                        <div class="slide-go">
+                            <a href="#">SHOP NOW</a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="slide">
+
+                    <img src="/cilent/assets/images/products/slider-3.webp" alt="">
                     <div class="slide-info">
                         <h5 class="slide-title">Best Collection</h5>
                         <h2 class="slide-name">EXCLUSIVE FASHION 2022</h2>
@@ -465,35 +401,317 @@
             </div>
 
             <div class="slider-cricle-btn">
-                
-            </div>
-
-        </section>
-
-
-        <section class="section">
-
-            <div class="hero-area hero-slider-1">
-
-                <h1>a</h1>
-
-            </div>
-            <div class="hero-area hero-slider-1">
-
-                <h1>bdasd</h1>
-
-            </div>
-            <div class="hero-area hero-slider-1">
-
-                <h1>c</h1>
 
             </div>
 
         </section>
 
+        <!-- =============== COLLECTION SLIDER - Start =============== -->
+
+        <section class="section collection">
+
+            <h1>The Most Trendy Pieces of Summer are at Vanguard</h1>
+            <div class="collection-area">
+
+
+                <div class="collection-list">
+
+                    <div class="list-one" style="background-image: url(/cilent/assets/images/products/product.jpg);">
+                        <div class="list-one-card">
+
+                            <div class="list-one-info">
+                                <P>HOT LIST</P>
+                                <a href="#">T-SHIRT COLLECTION</a>
+                            </div>
+
+                            <div class="one-btn">
+                                <a href="#">SHOP NOW</a>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="list-two">
+
+                        <div class="list-two-product"
+                            style="background-image: url(/cilent/assets/images/products/product.jpg);">
+
+
+                            <div class="list-two-card">
+
+                                <div class="list-two-info">
+                                    <P>HOT LIST</P>
+                                    <a href="#">T-SHIRT COLLECTION</a>
+                                </div>
+
+                                <div class="two-btn">
+                                    <a href="#">SHOP NOW</a>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+
+                        <div class="list-two-gift"
+                            style="background-image: url(/cilent/assets/images/settings/bg-2.svg);">
+
+                            <div class="gift-info">
+                                <a href="#">E-GIFT CARDS</a>
+                                <a href="#">Surprise someone with the gift theyreally want.</a>
+                            </div>
+
+                            <a class="shop-btn" href="#">SHOP NOW</a>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+
+        </section>
+
+
+        <!-- =============== COLLECTION SLIDER - End =============== -->
+
+
+        <!-- =============== TRENDY SLIDER - Start =============== -->
+
+        <section class="section trendy">
+
+            <div class="trendly-area">
+
+                <div class="trendy-sec-head">
+
+                    <h2>OUR TRENDY PRODUCTS</h2>
+
+                    <ul class="trendy-list">
+                        <li><a class="active" href="#">ALL</a></li>
+                        <li><a class="" href="#">NEW ARRIVALS</a></li>
+                        <li><a class="" href="#">BEST SELLERS</a></li>
+                        <li><a class="" href="#">DISCOUNTED</a></li>
+                    </ul>
+                </div>
+
+
+                <div class="trendy-product-list">
+
+                    <div class="trendy-product">
+
+                        <div class="product-image">
+                            <img src="/cilent/assets/images/products/product.jpg" alt="">
+                            <a href="#">ADD TO CART</a>
+                        </div>
+
+                        <div class="product-info">
+                            <div class="product-name">
+                                <a href="#">Category</a>
+                                <a href="#">Product Name</a>
+                                <p>$100</p>
+                            </div>
+
+                            <img src="" alt="">
+                            <!-- active wish icon -->
+                            <img src="" alt="">
+                        </div>
+
+                    </div>
+
+                    <div class="trendy-product">
+
+                        <div class="product-image">
+                            <img src="/cilent/assets/images/products/product.jpg" alt="">
+                            <a href="#">ADD TO CART</a>
+                        </div>
+
+                        <div class="product-info">
+                            <div class="product-name">
+                                <a href="#">Category</a>
+                                <a href="#">Product Name</a>
+                                <p>$100</p>
+                            </div>
+
+                            <img src="" alt="">
+                            <!-- active wish icon -->
+                            <img src="" alt="">
+                        </div>
+
+                    </div>
+
+                    <div class="trendy-product">
+
+                        <div class="product-image">
+                            <img src="/cilent/assets/images/products/product.jpg" alt="">
+                            <a href="#">ADD TO CART</a>
+                        </div>
+
+                        <div class="product-info">
+                            <div class="product-name">
+                                <a href="#">Category</a>
+                                <a href="#">Product Name</a>
+                                <p>$100</p>
+                            </div>
+
+                            <img src="" alt="">
+                            <!-- active wish icon -->
+                            <img src="" alt="">
+                        </div>
+
+                    </div>
+
+                    <div class="trendy-product">
+
+                        <div class="product-image">
+                            <img src="/cilent/assets/images/products/product.jpg" alt="">
+                            <a href="#">ADD TO CART</a>
+                        </div>
+
+                        <div class="product-info">
+                            <div class="product-name">
+                                <a href="#">Category</a>
+                                <a href="#">Product Name</a>
+                                <p>$100</p>
+                            </div>
+
+                            <img src="" alt="">
+                            <!-- active wish icon -->
+                            <img src="" alt="">
+                        </div>
+
+                    </div>
+
+                    <div class="trendy-product">
+
+                        <div class="product-image">
+                            <img src="/cilent/assets/images/products/product.jpg" alt="">
+                            <a href="#">ADD TO CART</a>
+                        </div>
+
+                        <div class="product-info">
+                            <div class="product-name">
+                                <a href="#">Category</a>
+                                <a href="#">Product Name</a>
+                                <p>$100</p>
+                            </div>
+
+                            <img src="" alt="">
+                            <!-- active wish icon -->
+                            <img src="" alt="">
+                        </div>
+
+                    </div>
+
+                    <div class="trendy-product">
+
+                        <div class="product-image">
+                            <img src="/cilent/assets/images/products/product.jpg" alt="">
+                            <a href="#">ADD TO CART</a>
+                        </div>
+
+                        <div class="product-info">
+                            <div class="product-name">
+                                <a href="#">Category</a>
+                                <a href="#">Product Name</a>
+                                <p>$100</p>
+                            </div>
+
+                            <img src="" alt="">
+                            <!-- active wish icon -->
+                            <img src="" alt="">
+                        </div>
+
+                    </div>
+
+                    <div class="trendy-product">
+
+                        <div class="product-image">
+                            <img src="/cilent/assets/images/products/product.jpg" alt="">
+                            <a href="#">ADD TO CART</a>
+                        </div>
+
+                        <div class="product-info">
+                            <div class="product-name">
+                                <a href="#">Category</a>
+                                <a href="#">Product Name</a>
+                                <p>$100</p>
+                            </div>
+
+                            <img src="" alt="">
+                            <!-- active wish icon -->
+                            <img src="" alt="">
+                        </div>
+
+                    </div>
+
+                    <div class="trendy-product">
+
+                        <div class="product-image">
+                            <img src="/cilent/assets/images/products/product.jpg" alt="">
+                            <a href="#">ADD TO CART</a>
+                        </div>
+
+                        <div class="product-info">
+                            <div class="product-name">
+                                <a href="#">Category</a>
+                                <a href="#">Product Name</a>
+                                <p>$100</p>
+                            </div>
+
+                            <img src="" alt="">
+                            <!-- active wish icon -->
+                            <img src="" alt="">
+                        </div>
+
+                    </div>
+
+                    <div class="trendy-product">
+
+                        <div class="product-image">
+                            <img src="/cilent/assets/images/products/product.jpg" alt="">
+                            <a href="#">ADD TO CART</a>
+                        </div>
+
+                        <div class="product-info">
+                            <div class="product-name">
+                                <a href="#">Category</a>
+                                <a href="#">Product Name</a>
+                                <p>$100</p>
+                            </div>
+
+                            <img src="" alt="">
+                            <!-- active wish icon -->
+                            <img src="" alt="">
+                        </div>
+
+                    </div>
+
+
+                    
+                </div>
+            </div>
+
+
+
+
+            <div class="trendy-cricle-btn">
+                <div class="cric-btn active"></div>
+                <div class="cric-btn"></div>
+                <div class="cric-btn"></div>
+            </div>
+
+
+
+        </section>
+
+        <!-- =============== TRENDY SLIDER - End =============== -->
 
     </main>
-
+    <!-- ================================
+        MAIN    -    END
+===================================== -->
     <footer>
 
         <div class="footer-top">
